--- a/cloud-config-repo/cloud-config-dev.properties
+++ b/cloud-config-repo/cloud-config-dev.properties
@@ -1,4 +1,2 @@
 
-mysqldb.datasource.url=jdbc:mysql://10.10.2.5:3306/dev_as_ivr?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-mysqldb.datasource.username=report
-mysqldb.datasource.password=Report123!
+from =git-dev-1.0
